likely final commit

--- a/views/thank-you.html.njk
+++ b/views/thank-you.html.njk
@@ -1,1 +1,10 @@
-<!-- This has been left intentionally empty -->
+{% extends "base.html.njk" %}
+
+{% block title %}
+Thank You
+{% endblock %}
+
+{% block content %}
+<h1>Thank you, {{ userName }}</h1>
+<a href="/top-fossils">Back to Top Fossils</a>
+{% endblock %}
