--- a/views/top-fossils.html.njk
+++ b/views/top-fossils.html.njk
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Most Liked Fossils</title>
-  </head>
-  <body>
-    <div class="fossil-div">
-      <h3>{{ fossils[0].name }}</h3>
-      <h2>Liked {{ fossils[0].num_likes }} times.</h2>
-      <img src="{{ fossils[0].img }}" />
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Most Liked Fossils</title>
+</head>
+
+<body>
+  {% extends "base.html.njk" %}
+
+  {% block title %}
+  Most Liked Fossils
+  {% endblock %}
+
+  {% block content %}
+  <h1>Welcome, {{ userName }}</h1>
+
+  {% for fossil in fossils %}
+  <div class="fossil-div">
+    <h3>{{ userName }}, this is a {{ fossil.name }}</h3>
+    <h2>Liked {{ fossil.num_likes }} times.</h2>
+    <img src="{{ fossil.img }}" alt="{{ fossil.name }}" />
+  </div>
+  {% endfor %}
+
+  <form action="/like-fossil" method="POST">
+    <label for="fossil-select">Like a fossil:</label>
+    <select id="fossil-select" name="fossil_id">
+      {% for id, fossil in fossils %}
+      <option value="{{ id }}">{{ fossil.name }}</option>
+      {% endfor %}
+    </select>
+    <input type="submit" value="Like!">
+  </form>
+  {% endblock %}
+</body>
+
 </html>
