--- a/views/homepage.html.njk
+++ b/views/homepage.html.njk
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Most Liked Fossils</title>
-  </head>
-  <body>
-    <h1>Most Liked Fossils</h1>
 
-    <form action="/get-name">
-      <div>
-        <label for="namefield">What's your name?</label>
-        <input id="namefield" type="text" name="name" required />
-      </div>
-      <div>
-        <input type="submit" />
-      </div>
-    </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Most Liked Fossils</title>
+</head>
 
-    <h1>Random Fossil</h1>
-    <button id="get-random-fossil">Get Random Fossil</button>
-    <div id="random-fossil-image"></div>
-    <p id="random-fossil-name"></p>
+<body>
+  {% extends "base.html.njk" %}
 
-    <script type="module" src="../src/random-fossil.js"></script>
-  </body>
+  {% block title %}
+  Most Liked Fossils
+  {% endblock %}
+
+  {% block content %}
+  <h1>Most Liked Fossils</h1>
+
+  <form action="/get-name" method="post">
+    <div>
+      <label for="namefield">What's your name?</label>
+      <input id="namefield" type="text" name="name" required />
+    </div>
+    <div>
+      <input type="submit" />
+    </div>
+  </form>
+
+  <h1>Random Fossil</h1>
+  <button id="get-random-fossil">Get Random Fossil</button>
+  <div id="random-fossil-image"></div>
+  <p id="random-fossil-name"></p>
+
+  <script type="module" src="../src/random-fossil.js"></script>
+  {% endblock %}
+</body>
+
 </html>
